# mac-chrome

./: README.md  package.json  setup.cfg  setup.py
scripts/: .chrome-close.applescript  .chrome-fullscreen-detect.applescript  .chrome-fullscreen-enter.applescript  .chrome-fullscreen-exit.applescript  .chrome-isready.applescript  .chrome-noisy-tabs.applescript  .chrome-open.applescript  .chrome-ready.applescript  .chrome-refresh.applescript  .chrome-url.applescript  .chrome-urls.applescript  chrome  chrome-close  chrome-frontmost  chrome-fullscreen-detect  chrome-fullscreen-enter  chrome-fullscreen-exit  chrome-isready  chrome-kill  chrome-noisy-tabs  chrome-open  chrome-pid  chrome-ready  chrome-refresh  chrome-url  chrome-urls  test.applescript
tests/chrome/examples/close/: close.sh
tests/chrome/examples/fullscreen/: detect.sh  enter.sh  exit.sh
tests/chrome/examples/help/: help.sh
tests/chrome/examples/kill/: kill.sh
tests/chrome/examples/open/: open.sh
tests/chrome/examples/pid/: pid.sh
tests/chrome/examples/refresh/: refresh.sh
tests/chrome/examples/url/: url.sh
tests/chrome/examples/urls/: urls.sh
tests/google-chrome/examples/audio/: audio.sh
tests/google-chrome/examples/close/: close.sh
tests/google-chrome/examples/fullscreen/: detect.sh  enter.sh  exit.sh
tests/google-chrome/examples/help/: help.sh
tests/google-chrome/examples/kill/: kill.sh
tests/google-chrome/examples/open/: open.sh
tests/google-chrome/examples/pid/: pid.sh
tests/google-chrome/examples/refresh/: refresh.sh
tests/google-chrome/examples/url/: url.sh
(+1 files in other folders)
