# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-chrome
version = 2019.6.23
url = https://github.com/looking-for-a-job/mac-chrome
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = google chrome

[options]
install_requires = 
	setuptools
scripts = 
	scripts/.chrome-close.applescript
	scripts/.chrome-fullscreen-detect.applescript
	scripts/.chrome-fullscreen-enter.applescript
	scripts/.chrome-fullscreen-exit.applescript
	scripts/.chrome-noisy-tabs.applescript
	scripts/.chrome-open.applescript
	scripts/.chrome-refresh.applescript
	scripts/.chrome-url.applescript
	scripts/.chrome-urls.applescript
	scripts/chrome
	scripts/chrome-close
	scripts/chrome-fullscreen-detect
	scripts/chrome-fullscreen-enter
	scripts/chrome-fullscreen-exit
	scripts/chrome-kill
	scripts/chrome-noisy-tabs
	scripts/chrome-open
	scripts/chrome-pid
	scripts/chrome-refresh
	scripts/chrome-url
	scripts/chrome-urls
